--- a/2.html
+++ b/2.html
@@ -13,7 +13,8 @@
 	<body style="background-color: #bababa">
         <div class="left">
         <!--<canvas></canvas>-->
-        <img src="big.png">
+        <img id="myImage">
+        document.getElementById("myImage").src = url
         <div class="little">
             <img src="little.png">
         </div>
@@ -78,40 +79,17 @@
     <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
     <script>
     $.ajax({
-        url: 'http://165.132.20.173:5000/most_similar_word/',
+        url: 'http://165.132.20.173:5000/found_images_db/',
         //type: 'GET',
         data: {'word': "soft"},
-        dataType:"json",
-        success:function(data)
-        {
-            console.log(data);
-            if(data.length>0)
-            {
-                var tb=$("<table/>");
-                console.log(data[0]);
-                console.log(data[0][0]);
-                console.log(data[0][1]);
-                for(var i in data)
-                {
-                    //var $id = i+1;
-                    var $word = data[i][0];
-                    var $ratio = data[i][1];
+        dataType: 'image/jpg',
+     async: false,
 
-                    var row = $("<tr />").append(
-                      //  $("<td />").text($id),
-                        $("<td />").text($word),
-                        $("<tr />").text($ratio)
-                    );
-                    tb.append(row);
-                }
-                $(".wrap").append(tb);
-            }
-        }
-    }).then((data, textStatus, jqXHR) => {
-       
-    }, (jqXHR, textStatus, errorThrown) => {
-        /*pass*/
-    })
+     success: function (data) {
+        console.log(data);
+     }
+
+     });
 </script>
     
 </html>
